# fs-recorder

./: CMakeLists.txt  Main.qml  images.qrc  main.cpp
Audio/: AudioDevice.cpp  AudioDevice.h  AudioTestProgram.cpp  CaptureSession.cpp  CaptureSession.h
Systems/FileHandler/: CSVHandler.cpp  CSVHandler.hpp  CustomFileHandler.cpp  CustomFileHandler.hpp
Systems/Logger/: Logger.cpp  Logger.hpp
Systems/QTBridge/: SimConnectBridge.cpp  SimConnectBridge.hpp
Systems/Recording/: Recording.cpp  Recording.hpp
Systems/SimConnectClient/: SimConnectManager.cpp  SimConnectManager.hpp  SimConnectWorker.cpp  SimConnectWorker.hpp
UI/: HomeScreen.qml  RecordingIcon.qml  StopIcon.qml
UI/Components/: FileMenu.qml  PauseButton.qml  PlayButton.qml  SimConnectStatus.qml  StatusMessage.qml
